--- a/src/html/topbar.htm
+++ b/src/html/topbar.htm
@@ -9,6 +9,7 @@
                     F3 <i class="slider-origin"></i><input class="speed-slider" type ="range" min ="0.5" max="2.0" step ="0.25" value ="1"/> F4
         		</div>
             </div><!--
+        --><div class="button speed-indicator"><span>100</span>%</div><!--
         --><div id="player-hook"></div><!--
         --><div id="player-time"></div><!--
         --><div class="button reset"><i class="fa fa-refresh"></i></div><!--
