--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <html manifest=manifest.appcache> <head> <meta http-equiv=Content-type content="text/html; charset=utf-8"> <title>oTranscribe</title>     <meta name="description" content="A free HTML5 app to take the pain out of transcribing interviews. Useful for journalists, academics and anyone else transcribing audio. And it's open source, too.">
+<!DOCTYPE html> <head> <meta http-equiv=Content-type content="text/html; charset=utf-8"> <title>oTranscribe</title>     <meta name="description" content="A free HTML5 app to take the pain out of transcribing interviews. Useful for journalists, academics and anyone else transcribing audio. And it's open source, too.">
     <link rel="icon" type="image/png" href="favicon.png" />
 
     <!-- Twitter meta tags -->
@@ -13,7 +13,7 @@
     <meta property="og:title" content="oTranscribe">
     <meta property="og:image" content="http://otranscribe.com/favicon.png">
     <meta property="og:description" content="A free HTML5 app to take the pain out of transcribing interviews. Useful for journalists, academics and anyone else transcribing audio. And it's open source, too.">
- <link rel=stylesheet href=style.css> <meta name=viewport content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1"> <link rel=prefetch type=application/l10n href=data.ini /> <link href="style.css" rel="stylesheet"></head> <body> <script src=l10n.js></script> <script src=./jakecache.js charset=utf-8></script> <div class="topbar inputting"><!--
+ <link rel=stylesheet href=style.css> <meta name=viewport content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1"> <link rel=prefetch type=application/l10n href=data.ini /> <link href="style.css" rel="stylesheet"></head> <body> <script src=l10n.js></script> <div class="topbar inputting"><!--
     --><div class="title active">oTranscribe</div><!--
     --><div class="controls">
            <div class="button play-pause"><i class="fa fa-play"></i><i class="fa fa-pause"></i></div><!--
